# cpp_lox

./: .gitignore  README.md  meson.build
include/: error_handler.hpp  lox.hpp  scanner.hpp
srcs/: main.cpp
